@@ -74,6 +74,7 @@ send_to_server:
   hosts = 127.0.0.1
   hosts_try_auth = *
   port = PORT_D
+  tls_try_verify_hosts = :
 
 
 # ----- Retry -----
