@@ -21,6 +21,9 @@ JH/05 The value of the tls_verify_certificates smtp transport and main options
       default to the word "system" to access the system default CA bundle.
       For GnuTLS, only version 3.0.20 or later.
 
+JH/06 Verification of the server certificate for a TLS connection is now tried
+      (but not required) by default.
+
 
 Exim version 4.85
 -----------------
